# realflight_ws

./: .gitignore  plot_traj.py
data/3drone_trajectories_001_-001/: drone_0_traj.csv  drone_1_traj.csv  drone_2_traj.csv
data/3drone_trajectories_new_vertical/: drone_0_traj_raw_20hz.csv  drone_0_traj_raw_20hz_enu.csv  drone_0_traj_smoothed_100hz.csv  drone_0_traj_smoothed_100hz_enu.csv  drone_1_traj_raw_20hz.csv  drone_1_traj_raw_20hz_enu.csv  drone_1_traj_smoothed_100hz.csv  drone_1_traj_smoothed_100hz_enu.csv  drone_2_traj_raw_20hz.csv  drone_2_traj_raw_20hz_enu.csv  drone_2_traj_smoothed_100hz.csv  drone_2_traj_smoothed_100hz_enu.csv
data/realflight_traj_new/: cable_0.csv  cable_1.csv  cable_2.csv  drone_0_traj_raw_20hz.csv  drone_1_traj_raw_20hz.csv  drone_2_traj_raw_20hz.csv  kfb.csv  payload.csv
data/realflight_traj_new_H (m2=0.1,rg=[0,-0.028])/: cable_0.csv  cable_1.csv  cable_2.csv  drone_0_traj_smoothed_100hz.csv  drone_0_traj_smoothed_100hz_diff.csv  drone_1_traj_smoothed_100hz.csv  drone_1_traj_smoothed_100hz_diff.csv  drone_2_traj_smoothed_100hz.csv  drone_2_traj_smoothed_100hz_diff.csv  kfb.csv  payload.csv
data/realflight_traj_new_H (m2=0.1,rg=[0,0.028])/: cable_0.csv  cable_1.csv  cable_2.csv  drone_0_traj_smoothed_100hz.csv  drone_0_traj_smoothed_100hz_diff.csv  drone_1_traj_smoothed_100hz.csv  drone_1_traj_smoothed_100hz_diff.csv  drone_2_traj_smoothed_100hz.csv  kfb.csv  (+2 more)
multi_uav_traj/: CMakeLists.txt  package.xml
scripts/: bag_topics.yaml  drone_start_nodes.sh  geom_multilift_start.sh  ground_coordinator_record.sh  l2c_hitl_start.sh  l2c_start.sh  prepare.sh  pva_feedback.sh  pva_hitl_start.sh  pva_start.sh  record_bag_from_yaml.sh  start_multi_tmux.sh
src/l2c_pkg/: CMakeLists.txt  README.md  package.xml
src/l2c_pkg/config/: l2c_hitl_params.yaml  l2c_realflight_params.yaml  l2c_sitl_params.yaml
src/l2c_pkg/include/l2c_pkg/: data_loader_new.hpp  l2c_node.hpp
src/l2c_pkg/launch/: l2c_hitl_sync.launch.py  l2c_realflight_sync.launch.py  l2c_sitl.launch.py  l2c_sitl_swarm.launch.py
src/l2c_pkg/src/: data_loader_new.cpp  l2c_main.cpp  l2c_node.cpp
src/pva_control/: CMakeLists.txt  package.xml
src/pva_control/config/: pva_hitl_params.yaml  pva_realflight_params.yaml  pva_sitl_params.yaml  pva_smooth_feedback_params.yaml  pva_smooth_feedback_realflight_params.yaml
src/pva_control/include/pva_control/: pva_control_node.hpp  pva_feedback_control_node.hpp
src/pva_control/launch/: pva_hitl_sync.launch.py  pva_realflight_sync.launch.py  pva_sitl.launch.py  pva_sitl_swarm.launch.py  pva_smooth_realflight_swarm.launch.py  pva_smooth_sitl_swarm.launch.py
src/pva_control/src/: pva_control_main.cpp  pva_control_node.cpp  pva_feedback_control_main.cpp  pva_feedback_control_node.cpp  pva_smooth_feedback_control_node.cpp
tmp/: geom_multilift_realflight_params_1_20251224_025707.yaml
tools/: get_data_new.py  plot_multi_traj.py  plot_preprocess_traj_new.py  preprocess_traj_new.py  preprocess_traj_new.yaml  preprocess_traj_vertical.py  preprocess_traj_vertical.yaml  save_traj_new.py  save_traj_vertical.py
(+125 files in other folders)
